Fixed #395 - login page logo overlaps

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -15,6 +15,7 @@ main {
 
 #logo {
     max-height: 10vmin;
+    max-width: 100%;
 }
 
 #teapot {
